force-app/main/default/objects/PARCurrentApprover__c/PARCurrentApprover__c.object-meta.xml
<CustomObject>
    <label>PAR Current Approver</label>
    <nameField>
        <label>Approver&apos;s Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAR Current Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>