force-app/main/default/objects/PARCurrentApprover__c/fields/ApproverId__c.field-meta.xml
<CustomField>
    <fullName>ApproverId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User in Salesforce</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PAR_Current_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>