force-app/main/default/objects/PARCurrentApprover__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Approver&apos;s email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>