force-app/main/default/objects/PARCurrentApprover__c/fields/isSFUser__c.field-meta.xml
<CustomField>
    <fullName>isSFUser__c</fullName>
    <formula>ApproverId__c &lt;&gt; null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Does this approver have a user account in Salesforce</inlineHelpText>
    <label>Is Salesforce User</label>
    <type>Checkbox</type>
</CustomField>