force-app/main/default/objects/PARCurrentApprover__c/fields/PriceApprovalRequestId__c.field-meta.xml
<CustomField>
    <fullName>PriceApprovalRequestId__c</fullName>
    <label>Price Approval Request</label>
    <referenceTo>PriceApprovalRequest__c</referenceTo>
    <relationshipLabel>Current Approvers</relationshipLabel>
    <relationshipName>PAR_Current_Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>